<resources>
    <string name="app_name">Crazy Talk</string>
    <string name="shr_hint_username">username</string>
    <string name="shr_hint_password">password</string>
    <string name="label">username</string>
    <string name="label1">password</string>
    <string name="sign_up">sign up</string>
    <string name="email">email</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="Share">Share</string>
    <string name="bio">Bio...</string>
    <string name="profile_name">Profile name</string>
    <string name="fav_sport">favorite sport...</string>
    <string name="hobbies">hobbies...</string>
    <string name="proffesion">your proffesion...</string>
    <string name="update_info">Update Info</string>
    <string name="profession">Profession...</string>
</resources>
