<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myToolbar"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    app:layout_constraintBottom_toTopOf="@+id/textField"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.tabs.TabItem

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/star"
        android:text="@string/profile" />

    <com.google.android.material.tabs.TabItem

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/user" />

    <com.google.android.material.tabs.TabItem

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Share" />


</com.google.android.material.tabs.TabLayout>